parslers-benchmark/src/tests/invalid/semanticErr/variables/undeclaredVarAccess.wacc
# access attempt on undeclared variable

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int x = 10 ;
  x = x + y
end
